# advent-of-code-2024

./: Cargo.toml
challenges/day-01/: input.txt  part-01.rs  part-02.rs
challenges/day-02/: part-01.rs  part-02.rs
challenges/day-03/: part-01.rs  part-02.rs
